--- a/same_array/package.json
+++ b/same_array/package.json
@@ -4,7 +4,7 @@
   "description": "Find same array",
   "main": "challenge.js",
   "scripts": {
-    "test": "mocha run tests.js"
+    "test": "mocha tests.js"
   },
   "author": "Mike",
   "license": "ISC"
